--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,15 @@
 body {
   text-align: center;
+  padding-right: 20%;
+  padding-left: 20%; 
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+
+.completed {
+  color: gray;
+  text-decoration: line-through;
 }
 
+.icon {
+  float: right;
+}
